--- a/server/views/restaurant-details.ejs
+++ b/server/views/restaurant-details.ejs
@@ -13,14 +13,14 @@
 <body>
     <header></header>
     <nav></nav>
-        <div class="restaurant-details">
-            <img class="restaurant-details-img" src="<%= photo %>">
-            <div>
-                <h1><%= name %></h1>
-                <h2><%= address %></h2>
-                <h2><%= phone %></h2>
+            <div class="restaurant-details">
+                <img class="restaurant-details-img" src=<%= restaurants.photo %>>
+                <div>
+                    <h1><%= restaurants.name %></h1>
+                    <h2><%= restaurants.address %></h2>
+                    <h2><%= restaurants.phone %></h2>
+                </div>
             </div>
-        </div>
 
 
     <footer></footer>
